--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>     // it is not closed 
-<html lang="en">    // define language
-    <head>              // html head part contain mainly title/ fabicon /meta tags
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML TUTORIAL</title>
-    </head>
-    <body>          // contain headings
-        <h1>heading two</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML TUTORIAL</title>
+</head>
+<body>
+    <h1>HEADING TWO</h1> 
+</body>
 </html>
