--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,7 @@
     <title>html_tutorial</title>
 </head>
 <body>
-    <h1 title="heading one">MAIN HEADING</h1>
+    <h1 title="heading one">MAIN HEADING</h1>   // core heading
     <h2>heading <span>two</span></h2>
     <a href="https://www.google.com/">google</a>
     <a href="http://" target="_blank" rel="noopener noreferrer"></a>  // in target press ctrl+space give option
