link and image tag in html

--- a/.vscode/one_shot/tag.html
+++ b/.vscode/one_shot/tag.html
@@ -28,6 +28,7 @@
 
     <!-- br tag break the line  -->
 
-    <p>"hi!! <br>I am soumyajit koley and an aspiring b-tech engineer"</p>
+    <p hidden title="title one">"hi!! <br>I am soumyajit koley and an aspiring b-tech engineer"</p>
+
 </body>
 </html>
